--- a/assets/styles.css
+++ b/assets/styles.css
@@ -61,7 +61,6 @@ nav ul li a.active{
         margin:5px;
         height:80px;
     }
-
 }
 @media (max-width:900px){
     .toggle-btn{
@@ -90,7 +89,7 @@ nav ul li a.active{
 /* Home-page */
 
 .home-page{
-    height: 100vh;
+    height: 80vh;
     width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url('./background.jpeg');
     background-position: center center;
@@ -152,13 +151,159 @@ nav ul li a.active{
     color:#000;
     text-align:center;
 }
-@media (max-width:500px){
+@media (max-width:900px){
     .home-page{
         width:100%;
-        height:100%;
+        height:100vh;
     }
-     button{
-         width:100%;
-         height:100%;
-     }
+    .main .btn-1{
+        width:30%;
+        height:4vh
+    }
+    .main .btn-2{
+        width:30%;
+        height:4vh
+    }
+    .main .btn-3{
+        width: 80%;
+        height:4vh;
+        
+    }
 }
+
+/* monster section */
+#monster{
+    height:85vh;
+    width: 100%;
+    background-color: #4992ca;
+}
+#section-2 h2{
+    color:#fff;
+    font-size:5vh;
+    font-weight:400;
+    font-family: 'Roboto', sans-serif;
+    text-align:center;
+    padding: 10px;
+}
+#section-2 p{
+    color:#fff;
+    font-size:2vh;
+    text-align:center;
+    line-height:24px;
+    white-space: pre-line;
+}
+#pokemon-types{
+    margin:50px;
+    height:40vh;
+    display:grid;
+    column-gap: 15px;
+    grid-template-columns: repeat(3,0.23fr);
+    grid-template-rows:repeat(3,0.2fr) ;
+    justify-content: center;
+    
+}
+#type-water, #type-fire, #type-leaf{
+    display: grid;
+    row-gap: 30px;;
+    grid-template-rows: repeat(3,0.2fr);
+    text-align: center;
+    justify-content: center;
+    color:#fff;
+}
+ .head{
+    font-size:5vh;
+}
+
+ @media(max-width:900px){
+    #monster {
+        height:160vh;
+        width:100%;
+    }
+    #pokemon-types {
+        /* grid-template-rows: repeat(3,0.12fr); */
+        grid-template-columns: 1fr;
+        grid-gap:20px; 
+    } 
+ }
+
+ /* staticstics  */
+
+ #statistics{
+     width:100%;
+     height:80vh;
+     justify-content: center;
+ }
+ .stat h2{
+     margin:15px auto;
+     text-align: center;
+     font-size:45px;
+
+ }
+ 
+ #stats-container{
+    margin:4px;
+    display: grid;
+    column-gap:8vw;
+    justify-content: center;
+    grid-template-columns: repeat(2, 0.25fr);
+    grid-template-rows: repeat(1, 0.5fr);
+ }
+ .one , .two{
+    display:grid;
+    text-align: center;
+    justify-content: space-between;
+    grid-template-rows: repeat(3,0.22fr);
+    row-gap:30px;  
+ }
+  .stats-h3  {
+     font-size: 25px;
+ } 
+
+ @media(max-width:900px){
+    #statistics{
+        width:100%;
+        height:160vh;
+    }
+    #stats-container{
+        grid-template-columns: 0.25fr;
+        grid-gap:20px;
+    }
+ }
+ /* section-6 */
+ #q-section{
+     width:100%;
+     height:70vh;
+     margin:5px auto;
+     background-color: #4992ca;
+     justify-content: center;;
+ }
+ .answer-section h2{
+     font-size:45px;
+     font-weight:200;
+     color:#fff;
+     font-family: 'Roboto', sans-serif;
+     padding-top:30px;
+     text-align: center;
+ }
+ .answer-section  h4{
+     font-size: 20px;
+     font-weight:100;
+     padding-left:15%;
+     padding-top:2%;
+     color:#fff;
+ }
+ .ques ul li{
+     margin-left:20%;
+     font-size:15px;
+     font-weight:50;
+     color:#fff;
+     width:100vh;
+     height:10vh;
+ }
+ @media(max-width:900px){
+    #q-section{
+        width:100%;
+        height:90vh;
+    }
+    
+ }
