--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,6 +7,7 @@
 body{
     width:100%;
     height:100%;
+    overflow-x: hidden;
 }
 /* navbar */
 header{
@@ -269,11 +270,83 @@ nav ul li a.active{
         grid-gap:20px;
     }
  }
+ /* section-5 */
+ #poke-section{
+     width:100%;
+     height:80vh;
+     margin:15px auto;
+     text-align:center;
+ }
+ #poke-section h3{
+     color: #000;
+     text-align:center;
+     font-size:3vh;
+     padding-top:2%;
+ }
+ .poke-year{
+     margin-top:3%;
+     margin-left:20%;
+     justify-content:center;
+     display:grid;
+     row-gap:15px;
+     grid-template-rows: repeat(4,0.5fr);
+    }
+ .poke-one, .poke-two , .poke-three, .poke-four{
+    display:grid;
+    text-align: center;
+    grid-template-columns: 0.17fr 0.17fr 0.44fr;
+    column-gap:3px;
+ }
+ .poke{
+     width:45%;
+     height:55%;
+ }
+ .ele h4{
+     color:#dddddd;
+     font-size:20px;
+     font-weight:100;
+ }
+ .ele h6{
+     color:#575252;
+     font-size:10px;
+ }
+ #txt p{
+     font-size:15px;
+     color:#8f8f91;
+ }
+ @media(max-width:900px){
+    #poke-section{
+        width:100%;
+        height:200vh;
+   }
+   .poke-year{
+       margin-top:8%;
+       margin-left:5%;
+       grid-template-rows: repeat(4,0.5fr);
+       row-gap:20px;
+
+   }
+   .poke{
+       width:30vw;
+       height:10vh
+
+   }
+   .poke-one, .poke-two , .poke-three, .poke-four{
+       column-gap:8%;
+      
+   }
+
+   
+
+
+
+ }
+
+
  /* section-6 */
  #q-section{
      width:100%;
      height:70vh;
-     margin:5px auto;
      background-color: #4992ca;
      justify-content: center;;
  }
@@ -286,15 +359,19 @@ nav ul li a.active{
      text-align: center;
  }
  .answer-section  h4{
-     font-size: 20px;
+     font-size: 3vh;
      font-weight:100;
      padding-left:15%;
      padding-top:2%;
      color:#fff;
  }
+ .ques ol li{
+     color:#fff;
+ }
+
  .ques ul li{
      margin-left:20%;
-     font-size:15px;
+     font-size:1em;
      font-weight:50;
      color:#fff;
      width:100vh;
@@ -303,7 +380,89 @@ nav ul li a.active{
  @media(max-width:900px){
     #q-section{
         width:100%;
-        height:90vh;
+        height:105vh;
     }
-    
+     .ques ul li {
+        margin-left:5%;
+        width:95%;
+        height:100%; 
+        
+    } 
+    .ques ol li{
+        margin-top:5%;
+        margin-right:5%;
+        /* list-style-type: none; */
+    }
+ }
+
+ /* section-7 */
+ #table-section{
+     width:100%;
+     height:80vh;
+     justify-content:center;
+ }
+ .div-content{
+     width:80%;
+     height:60vh;
+     justify-content:space-around;
+     display:flex;
+ }
+
+ table{
+     width:100%;
+     height:10vh;
+     text-align:center;
+     justify-content: center;
+     /* margin-left:22%;
+     margin-top:5%; */
+     border-collapse: collapse;
+ }
+ td,th{
+     text-align:center;
+     padding:12px;
+     border:1px solid #dddddd;
+ }
+ th{
+     color:#000;
+     font-size:3.5vh;
+     font-size:500;
+ }
+ td{
+     color:#8a8a8a;
+     font-weight:300;
+     font-size:3vh;
+ }
+
+ /* section-8 */
+ #section-8{
+     width:100%;
+     height:35vh;
+     justify-content: center;
+     background-color: #000000b3;
+ }
+ .div-know{
+     text-align:center;
+ }
+ .div-know h2{
+     padding-top:5%;
+     text-align:center;
+     color:#fff;
+     font-size:6vh;
+ }
+ .div-know button{
+     text-align:Center;
+     justify-content: center;
+     margin-top:2%;
+     background-color: transparent;
+     color:#fff;
+     width:13vw;
+     height:6vh;
+     border:2px solid #fff;
+     font-weight:400;
+ }
+ @media(max-width:900px){
+    .div-know button{
+        width:35vw;
+        height:7vh;
+    }
  }
