--- a/assets/style2.css
+++ b/assets/style2.css
@@ -84,7 +84,7 @@
 #trainers-section h3{
     color: #000;
     text-align:center;
-    font-size:3vh;
+    font-size:4vh;
     padding-top:2%
 }
 #txt-trainer p{
@@ -102,7 +102,7 @@
 /* section-11 */
 #gen-cards{
     width:100%;
-    height:100vh;
+    height:110vh;
 }
 #gen-cards h1{
     margin:2%;
@@ -145,17 +145,30 @@
     background-color: rgba(0, 0, 0, 0.03);
     border-bottom: rgba(0, 0, 0, 0.125);
   }
-
-/* #input-email-section {
+  @media(max-width:900px){
+    #gen-cards{
+        width:100%;
+        height:185vh;
+    }
+  }
+/* section-email 12*/
+#email-section {
     background-color: #424242;
+    width:100%;
+    height:25vh;
     color: white;
     text-align: center;
     border-radius: 6px;
-} */
-
-/* .input-email {
-    width: 250px;
+}
+#email-section h2{
+    font-size:5vh;
+    color:#fff;
+    padding-top:2%;
+}
+.input-email {
+    width: 42vh;
     height: 35px;
+    margin-top:2%;
 }
 
 .submit-button {
@@ -165,7 +178,95 @@
     color: white;
     border: 2px solid white;
     cursor: pointer;
-} */
+}
+@media(max-width:900px){
+    #email-section{
+        width:100%;
+        height:30vh;
+        margin-top:3%;
+    }
+    .input-email{
+        margin-top:5%;
+    }
+
+}
+
+/* section-13 */
+#pokemon-games{
+    width:100%;
+    height:90vh;
+    text-align:center;
+}
+.poke-games-heading {
+    text-align:center;
+    padding-top:1.5%;
+    font-size: 5vh;
+    color: grey;
+}
+.poke-games-card-row {
+    justify-content:center;
+    margin-right:5%;
+    margin-left:-5%;
+    padding:2%;
+}
+.poke-games-card-row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.poke-games-card-column {
+    float: right;
+    display: inline;
+    width: 50vh;
+    height:50vh;
+    padding: 0 20px;
+}
+
+.poke-games-card {
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+  padding: 16px;
+  text-align: center;
+  /* background-color: whitesmoke;
+  border-radius: 5px; */
+} 
+.poke-game-title {
+    font-size:3vh;
+    font-weight: 700;
+    padding-bottom: 2%;;
+}
+.poke-game-img {
+    padding:4%;
+    height: 20vh;
+} 
+
+.see-more-button {
+    background-color: #4992ca;
+    border: none;
+    height: 50px;
+    width: 250px;
+    color: white;
+    font-size: 17px;
+} 
+@media(max-width:1000px){
+ #pokemon-games{
+    width:100%;
+    height:95vh;
+    text-align:center;
+}
+.poke-games-card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background-color: whitesmoke;
+    border-radius: 5px;
+  } 
+  .see-more-button{
+      margin-left:25%;
+      display: table;
+  }
+}
+
+
+
+
 
 
 
