--- a/assets/style2.css
+++ b/assets/style2.css
@@ -2,7 +2,6 @@
 /* section9 */
 #section-9{
     width:100%;
-    height:50vh;
     margin:5%;
 }
 #section-9 h3{
@@ -77,8 +76,7 @@
 /* section=10 */
 #trainers-section{
     width:100%;
-    height:90vh;
-    margin:5px;
+    margin:4px;
     background-color: #4992ca;
 }
 #trainers-section h3{
@@ -91,18 +89,33 @@
     font-size:15px;
     color:#ffff;
 }
-@media(max-width:900px){
-    #trainers-section{
-        width:100%;
-        height:200vh;
-        overflow-x: scroll;
-   }
+@media (max-width:900px){
+.section-10-div{
+    width:100%;
+    height:190vh;
 }
+#txt-trainer {
+    grid-column: 1/3;
+    padding:2%;
+}
+}
+@media (max-width:900px){
+    .section-10-div{
+        width:100%;
+        height:198vh;
+    }
+}    
+@media (max-width:376px){
+    .section-10-div{
+        width:100%;
+        height:225vh;
+        margin-bottom:2%;
+    }
+}  
 
 /* section-11 */
 #gen-cards{
     width:100%;
-    height:110vh;
 }
 #gen-cards h1{
     margin:2%;
@@ -138,24 +151,39 @@
     padding: 10px;
   }
   
-  .card-header {
+.card-header {
     margin-bottom: 0;
     border-bottom: 1px solid;
     border-top: 16px solid #4992ca;
     background-color: rgba(0, 0, 0, 0.03);
     border-bottom: rgba(0, 0, 0, 0.125);
-  }
-  @media(max-width:900px){
-    #gen-cards{
+}
+  @media (max-width:950px){
+    .gen-cards-div{
         width:100%;
-        height:185vh;
+        height:180vh;
+    }
+    
+  }
+  @media (max-width:900px){
+    .gen-cards-div{
+        width:100%;
+        height:222vh;
+    }
+  }
+  @media (max-width:376px){
+    .gen-cards-div{
+        width:100%;
+        height:270vh;
+    }
+    .cards_container{
+        margin-right:5%;
     }
   }
 /* section-email 12*/
 #email-section {
     background-color: #424242;
     width:100%;
-    height:25vh;
     color: white;
     text-align: center;
     border-radius: 6px;
@@ -169,6 +197,7 @@
     width: 42vh;
     height: 35px;
     margin-top:2%;
+    margin-bottom:2%;
 }
 
 .submit-button {
@@ -178,6 +207,7 @@
     color: white;
     border: 2px solid white;
     cursor: pointer;
+    margin-bottom:2%;
 }
 @media(max-width:900px){
     #email-section{
@@ -194,7 +224,6 @@
 /* section-13 */
 #pokemon-games{
     width:100%;
-    height:90vh;
     text-align:center;
 }
 .poke-games-heading {
@@ -203,36 +232,22 @@
     font-size: 5vh;
     color: grey;
 }
-.poke-games-card-row {
-    justify-content:center;
-    margin-right:5%;
-    margin-left:-5%;
-    padding:2%;
-}
-.poke-games-card-row::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-.poke-games-card-column {
-    float: right;
-    display: inline;
-    width: 50vh;
-    height:50vh;
-    padding: 0 20px;
+ .poke-games-card-row {
+    height:55vh;
+    text-align:center;
 }
 
-.poke-games-card {
-  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
-  padding: 16px;
-  text-align: center;
-  /* background-color: whitesmoke;
-  border-radius: 5px; */
+.poke-games-card-column {
+    float:right;
+    width: 65vh;
+    height: 47vh;
+    padding-top:3%;
+    margin-right:45px;
 } 
 .poke-game-title {
     font-size:3vh;
     font-weight: 700;
-    padding-bottom: 2%;;
+    padding-bottom: 3%;
 }
 .poke-game-img {
     padding:4%;
@@ -246,30 +261,84 @@
     width: 250px;
     color: white;
     font-size: 17px;
+    margin-bottom:2%;
 } 
-@media(max-width:900px){
- #pokemon-games{
+
+@media(max-width:1200px){
+ .pokemon-games-div{
     width:100%;
-    height:170vh;
+    height:88vh;
     text-align:center;
+ }
+ .poke-games-card-column{
+    width: 55vh;
+ }
+ .see-more-button{
+     margin-top:3%;
+ }
 }
-.poke-games-card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    background-color: whitesmoke;
-    border-radius: 5px;
-  } 
-  .see-more-button{
-      margin-left:25%;
-      display: inline;
-  }
+@media(max-width:1026px){
+ .poke-games-card-column{
+    width: 45vh;
+ }
 }
+@media(max-width:800px){
+    .pokemon-games-div{
+        width:100%;
+        height:88vh;
+        text-align:center;
+     }
+     .poke-games-card-column{
+        width: 35vh;
+     }
+}
+@media(max-width:951px){
+    .pokemon-games-div{
+        width:100%;
+        height:120vh;
+        text-align:center;
+     }
+    .poke-games-card-column {
+        margin-right:15%;
+    } 
+    .see-more-button{
+        margin-top:18%;
+    }
+}
+@media(max-width:576px){
+    .pokemon-games-div{
+    width:100%;
+    height:185vh;
+    margin-left:-5%;
+    text-align:center;
+    }
+}
+
+@media(max-width:376px){
+    .pokemon-games-div{
+    width:100%;
+    height:185vh;
+    text-align:center;
+    }
+    .poke-games-card-row{
+        height:154vh;
+    }
+    .poke-games-card-column{
+        text-align: center;
+        margin-bottom:32px;
+    }
+    .see-more-button{
+    margin-top:10%;
+    }
+}
+
 
 /* section-14 */
 .designer-photo {
     border-radius: 50%;
     margin-left:20%;
+    height:20vh;
     text-align:center;
-    height: 25vh;
     padding:2%;
 }
 .designer-name {
@@ -291,6 +360,7 @@
     margin-right: 20px;
     font-size:2vh;
     color:#fff;
+    margin-bottom:5%;
 }
 .des-1 , .des-2, .des-3{
     display: grid;
@@ -298,6 +368,40 @@
     text-align: center;
     justify-content: center;
     color:#fff;
+    margin-bottom:3%;
+}
+@media(max-width:900px){
+    #designers-section{
+        width:100%;
+        height:205vh;
+    }
+    .des-1 , .des-2, .des-3{
+        margin-top:-35px;
+    }
+    .designer-name{
+        margin-top:-85px;
+        padding-left:6%;
+    }
+    .sub-heading{
+        margin-top:-55px;
+        font-size:20px;
+        padding-left:50px;
+    }
+    .designer-about{
+        font-size:25px;
+    }
+}
+@media(max-width:568px){
+    #designers-section{
+        width:100%;
+        height:225vh;
+    }
+    .designer-name{
+        padding-left:45%;
+    }
+    .sub-heading{
+        padding-left:45%;
+    }
 }
 /* section-15 */
 #logos {
@@ -369,10 +473,9 @@ footer {
     padding:2%;
     width: 80%;
     height: 150px;
-    /* border: 1px solid black; */
+    margin:0 auto;
     display: flex;
     text-align: center;
-    margin: 0 auto;
 }
   
 #main-footer div {
@@ -390,11 +493,11 @@ ul{
     text-decoration: none;
     color: white;
 }
-@media(max-width:900px){
-    footer{
-        width:100%;
-        height:25vh;
+@media(max-width:568px){
+    #main-footer{
+        height:160px;
     }
+    
 } 
 
 
