--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,16 +5,15 @@
 
 }
 body{
-    width:100%;
-    height:100%;
+    width:100vw;
     overflow-x: hidden;
 }
 /* navbar */
 header{
     position:relative;
     margin:5px auto;
-    height:69px;
     padding:5px;
+    height:54px;
     background:#fff;
     box-sizing:border-box;
     border-radius:4px;
@@ -64,11 +63,11 @@ nav ul li a.active{
 }
 @media (max-width:1200px){
     header{
-        margin:5px;
+        margin:4px;
         height:80px;
     }
 }
-@media (max-width:900px){
+@media (max-width:950px){
     .toggle-btn{
         display:block;
         width:30px;
@@ -95,8 +94,8 @@ nav ul li a.active{
 /* Home-page */
 
 .home-page{
-    height: 80vh;
     width: 100%;
+    height:80vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url('./background.jpeg');
     background-position: center center;
     background-repeat: no-repeat;
@@ -157,11 +156,13 @@ nav ul li a.active{
     color:#000;
     text-align:center;
 }
-@media (max-width:900px){
+@media (max-width:1200px){
     .home-page{
-        width:100%;
         height:100vh;
+
     }
+}
+@media (max-width:900px){
     .main .btn-1{
         width:30%;
         height:4vh
@@ -171,15 +172,18 @@ nav ul li a.active{
         height:4vh
     }
     .main .btn-3{
-        width: 80%;
-        height:4vh;
+        width: 40%;
+        height:6vh;
         
     }
 }
-
+@media (max-width:568px){
+    .home-page{
+        height:120vh;
+    }
+}
 /* monster section */
 #monster , #designers-section{
-    height:75vh;
     width: 100%;
     background-color: #4992ca;
 }
@@ -189,7 +193,7 @@ nav ul li a.active{
     font-weight:400;
     font-family: 'Roboto', sans-serif;
     text-align:center;
-    padding: 10px;
+    padding: 28px;
 }
 .section-2 p{
     color:#fff;
@@ -200,7 +204,7 @@ nav ul li a.active{
 }
 .pokemon-types{
     margin:30px;
-    height:40vh;
+    height:60vh;
     display:grid;
     column-gap: 15px;
     grid-template-columns: repeat(3,0.23fr);
@@ -220,9 +224,9 @@ nav ul li a.active{
     font-size:5vh;
 }
 
- @media(max-width:1100px){
-    #monster , #designers-section {
-        height:180vh;
+ @media(max-width:900px){
+    .monster-div {
+        height:140vh;
         width:100%;
     }
     .pokemon-types {
@@ -230,13 +234,21 @@ nav ul li a.active{
         grid-template-columns: 1fr;
         grid-gap:20px; 
     } 
- }
+    .section-2 p{
+        margin:2px 20px;
+    }
 
+ }
+ @media (max-width: 568px){
+    .monster-div {
+       height: 180vh;
+       width: 100%;
+    }
+}   
  /* staticstics  */
 
  #statistics{
      width:100%;
-     height:80vh;
      justify-content: center;
  }
  .stat h2{
@@ -266,9 +278,9 @@ nav ul li a.active{
  } 
 
  @media(max-width:900px){
-    #statistics{
+    .stat-div{
         width:100%;
-        height:160vh;
+        height:175vh;
     }
     #stats-container{
         grid-template-columns: 0.25fr;
@@ -278,7 +290,6 @@ nav ul li a.active{
  /* section-5 */
  #poke-section{
      width:100%;
-     height:80vh;
      margin:15px auto;
      text-align:center;
  }
@@ -301,6 +312,7 @@ nav ul li a.active{
     text-align: center;
     grid-template-columns: 0.17fr 0.17fr 0.44fr;
     column-gap:3px;
+    margin-bottom:2%;
  }
  .poke{
      width:45%;
@@ -319,36 +331,43 @@ nav ul li a.active{
      font-size:15px;
      color:#8f8f91;
  }
- @media(max-width:900px){
-    #poke-section{
-        width:100%;
-        height:200vh;
+ @media  (max-width: 900px){
+    .poke-section-div{
+     height:170vh;
+     margin-bottom:7%;
+        
    }
-   
    .poke-year{
-       margin-top:8%;
+       margin-top:5%;
        margin-left:5%;
-       grid-template-rows: repeat(4,0.5fr);
+       grid-template-rows: 2fr 2fr;
        row-gap:20px;
-
    }
    .poke{
-       width:30vw;
-       height:10vh
+       width:22vw;
+       height:15vh
 
    }
    .poke-one, .poke-two , .poke-three, .poke-four{
        column-gap:8%;
-      
+       grid-template-columns: 1fr 1fr;      
    }
-
+   #txt {
+       padding:2%;
+       grid-column:1/3;
+   }
+ }
+ @media(max-width:376px){
+    .poke-section-div{
+        height:190vh;
+        margin-bottom:7%;    
+      }
  }
 
 
  /* section-6 */
  #q-section{
      width:100%;
-     height:70vh;
      background-color: #4992ca;
      justify-content: center;;
  }
@@ -379,38 +398,69 @@ nav ul li a.active{
      width:100vh;
      height:10vh;
  }
+ @media(max-width:1200px){
+    .ques ul li{
+        padding-top:3%;
+
+    }
+
+ }
  @media(max-width:900px){
-    #q-section{
+    .answe-section{
         width:100%;
-        height:105vh;
+        height:125vh;
+        overflow-x: hidden;
     }
      .ques ul li {
         margin-left:5%;
+        padding-bottom:1.5%;
         width:95%;
         height:100%; 
         
     } 
     .ques ol li{
-        margin-top:5%;
+        margin-top:2%;
         margin-right:5%;
         /* list-style-type: none; */
     }
  }
-
  /* section-7 */
  #table-section{
      width:100%;
-     height:80vh;
      justify-content:center;
  }
- .div-content{
-     width:80%;
-     height:60vh;
-     justify-content:space-around;
-     display:flex;
+ #table-section h3{
+     font-size:18px;
+     font-weight:200;
+     font-family: 'Roboto', sans-serif;
+     text-align:center;
+     padding-top:3%;
+ }
+ #table-section h4{
+     font-size:18px;
+     font-weight:500;
+     color:#000;
+     text-align:center;
  }
 
- table{
+ .div-content{
+     display: grid;
+     grid-template-columns: 30% 70%;
+     column-gap: 14px;
+     padding:2em 7em;
+     line-height: 1.5;
+
+ }
+ #para-div{
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
+     font-size:18px;
+     color:#8a8a8a;
+ }
+
+
+  table{
      width:100%;
      height:10vh;
      text-align:center;
@@ -426,19 +476,46 @@ nav ul li a.active{
  }
  th{
      color:#000;
-     font-size:3.5vh;
+     font-size:18px;
      font-size:500;
  }
  td{
      color:#8a8a8a;
      font-weight:300;
-     font-size:3vh;
+     font-size:18px;
+ } 
+ @media(max-width:1025px){
+    .div-content{
+        grid-template-columns: 40% 60%;
+    }
+    td{
+        font-size:15px;
+    }
+
  }
+ @media(max-width:769px){
+   td{
+       font-size:10px;
+   }
+   #para-div{
+       font-size:16px;
+   }
+   .div-content{
+       padding:2em;
+   }
+ }
+ @media(max-width:567px){
+   .div-content{
+       grid-template-columns:auto;
+       row-gap: 20px;
+       padding:1.25em;
+   }
+ }
+
 
  /* section-8 */
  #section-8{
      width:100%;
-     height:35vh;
      justify-content: center;
      background-color: #000000b3;
  }
@@ -461,6 +538,7 @@ nav ul li a.active{
      height:6vh;
      border:2px solid #fff;
      font-weight:400;
+     margin-bottom:2%;
  }
  @media(max-width:900px){
     .div-know button{
