--- a/assets/styles.css
+++ b/assets/styles.css
@@ -96,7 +96,7 @@ nav ul li a.active{
 .home-page{
     width: 100%;
     height:80vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url('./background.jpeg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)), url('./images/background.jpeg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
